# python-interview-prep

./: README.md  pyproject.toml
01-core-mechanics/: README.md  SOLUTIONS.md  puzzle_01_mutable_defaults.py  puzzle_02_closure_late_binding.py  puzzle_03_leb_scope.py
02-oop-internals/: README.md  SOLUTIONS.md  puzzle_01_mro_diamond.py  puzzle_02_class_vs_instance.py  puzzle_03_new_vs_init.py
03-generators-iterators/: README.md  SOLUTIONS.md  puzzle_01_yield_basics.py  puzzle_02_yield_from.py  puzzle_03_custom_iterators.py
04-async-concurrency/: README.md  SOLUTIONS.md  puzzle_01_blocking_loop.py  puzzle_02_task_scheduling.py  puzzle_03_async_context_manager.py
05-web-frameworks/: README.md  SOLUTIONS.md  puzzle_01_flask_context.py  puzzle_02_fastapi_di.py  puzzle_03_pydantic_validation.py
06-building-challenges/: README.md  SOLUTIONS.md  challenge_01_retry_decorator.py  challenge_02_simple_router.py  challenge_03_custom_future.py
